- Fix https://github.com/manifold-systems/manifold/issues/117: NoSuchFileException loading plugin with IntelliJ 2019.2.x - Fix license issue

--- a/build.gradle
+++ b/build.gradle
@@ -90,6 +90,7 @@ intellij {
   //alternativeIdePath = 'C:\\Program Files\\Android\\Android Studio'
   //alternativeIdePath = 'C:\\Program Files\\JetBrains\\IntelliJ IDEA Community Edition 2018.3.4'
   //alternativeIdePath = 'C:\\Program Files\\JetBrains\\IntelliJ IDEA 192.5281.24'
+  //alternativeIdePath = 'C:\\Program Files\\JetBrains\\IntelliJ IDEA 2019.2.2'
   pluginName project.name
   version getIjVersion() // Ordinarily, just use the version number: '15.0.6' or '2016.3'. Alternatively, the precise API level is OK too: 'IC-143.2370.31'
   if( version.contains( "EAP" ) )
