--- a/gradle.properties
+++ b/gradle.properties
@@ -1,8 +1,8 @@
-version=2019.1.15
+version=2019.2.1
 manifoldVersion=2019.1.14-SNAPSHOT
 org.gradle.jvmargs=-Dfile.encoding=UTF-8
-defaultIjVersion=LATEST-EAP-SNAPSHOT
-//defaultIjVersion=2019.2.3
+//defaultIjVersion=LATEST-EAP-SNAPSHOT
+defaultIjVersion=2019.2.3
 //defaultIjVersion=2019.1.3
 //defaultIjVersion=2018.3.4
 //defaultIjVersion=2017.3.4
