must reset fields earlier than ProjectComponent scope, otherwise intellij get references to the original value and stuff goes to shit later. e.g., STRING_LITERAL reference must be ours everywhere from square one.

--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -247,6 +247,12 @@ Length distance = rate * time;
     </group>
   </actions>
 
+  <application-components>
+    <component>
+      <implementation-class>manifold.ij.core.ManApplicationComponent</implementation-class>
+    </component>
+  </application-components>
+
   <project-components>
     <component>
       <implementation-class>manifold.ij.core.ManProjectComponent</implementation-class>
