use latest manifold api changes

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
 version=2019.3.5
-manifoldVersion=2019.1.26
+manifoldVersion=2019.1.26-SNAPSHOT
 org.gradle.jvmargs=-Dfile.encoding=UTF-8
 defaultIjVersion=LATEST-EAP-SNAPSHOT
 //defaultIjVersion=2019.2.3
