--- a/build.gradle
+++ b/build.gradle
@@ -91,16 +91,18 @@ intellij {
   //alternativeIdePath = 'C:\\Program Files\\JetBrains\\IntelliJ IDEA Community Edition 2018.3.4'
   //alternativeIdePath = 'C:\\Program Files\\JetBrains\\IntelliJ IDEA 192.5281.24'
   //alternativeIdePath = 'C:\\Program Files\\JetBrains\\IntelliJ IDEA 2019.2.2'
+  //alternativeIdePath = 'C:\\Program Files\\JetBrains\\IntelliJ IDEA 2019.3.3'
   //alternativeIdePath = 'C:\\Program Files\\JetBrains\\IntelliJ IDEA Community Edition 193.3793.14'
+  //alternativeIdePath = 'C:\\Program Files\\JetBrains\\IntelliJ IDEA Community Edition 193.5233.102'
   pluginName project.name
   version getIjVersion() // Ordinarily, just use the version number: '15.0.6' or '2016.3'. Alternatively, the precise API level is OK too: 'IC-143.2370.31'
   if( version.contains( "EAP" ) || Double.parseDouble( version.substring(0, version.lastIndexOf('.'))) >= 2019.2 )
   {
-    plugins = ['java', 'com.intellij.lang.jsgraphql:2.2.0'] //include PsiViewer & GraphQL JS in sandbox
+    plugins = ['java', 'com.intellij.lang.jsgraphql:2.3.0'] //include PsiViewer & GraphQL JS in sandbox
   }
   else
   {
-    plugins = ['com.intellij.lang.jsgraphql:2.2.0'] //include PsiViewer & GraphQL JS in sandbox
+    plugins = ['com.intellij.lang.jsgraphql:2.3.0'] //include PsiViewer & GraphQL JS in sandbox
   }
 }
 
