--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,8 @@
-version=2019.3.8
-manifoldVersion=2019.1.30
+version=2019.3.9
+manifoldVersion=2020.1.1
 org.gradle.jvmargs=-Dfile.encoding=UTF-8
-defaultIjVersion=LATEST-EAP-SNAPSHOT
+//defaultIjVersion=LATEST-EAP-SNAPSHOT
+defaultIjVersion=2019.3.3
 //defaultIjVersion=2019.2.3
 //defaultIjVersion=2019.1.3
 //defaultIjVersion=2018.3.4
