--- a/gradle.properties
+++ b/gradle.properties
@@ -1,8 +1,7 @@
-version=2019.3.8
-manifoldVersion=2019.1.30
+version=2020.1.1
+manifoldVersion=2020.1.1-SNAPSHOT
 org.gradle.jvmargs=-Dfile.encoding=UTF-8
 defaultIjVersion=LATEST-EAP-SNAPSHOT
+//defaultIjVersion=2019.3.3
 //defaultIjVersion=2019.2.3
 //defaultIjVersion=2019.1.3
-//defaultIjVersion=2018.3.4
-//defaultIjVersion=2017.3.4
