--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
-version=2020.1.1
-manifoldVersion=2020.1.1-SNAPSHOT
+version=2020.1.2
+manifoldVersion=2020.1.2
 org.gradle.jvmargs=-Dfile.encoding=UTF-8
 defaultIjVersion=LATEST-EAP-SNAPSHOT
 //defaultIjVersion=2019.3.3
